Comment (..)
--add-opens java.logging/java.util.logging=ALL-UNNAMED